--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.104.0
-pydantic==2.4.2
+pydantic>=1.10,!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0
 joblib==1.3.2
 pandas==2.1.1
 shap==0.43.0
